--- a/app/src/main/res/layout/fragment_medicine.xml
+++ b/app/src/main/res/layout/fragment_medicine.xml
@@ -209,19 +209,27 @@
             android:id="@+id/query_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/color_2"
             android:text="查詢"
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            app:backgroundTint="@null"
+            android:textSize="20sp"
+            android:textColor="#000000"
             tools:ignore="HardcodedText" />
         <Button
             android:id="@+id/medicine_allbox_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/color_2"
             android:text="藥物總覽"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="5dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            app:backgroundTint="@null"
+            android:textSize="20sp"
+            android:textColor="#000000"
             tools:ignore="HardcodedText" />
     </LinearLayout>
 
