--- a/app/src/main/res/layout/fragment_user_data.xml
+++ b/app/src/main/res/layout/fragment_user_data.xml
@@ -5,9 +5,143 @@
     android:layout_height="match_parent"
     tools:context=".ui.user_data.user_dataFragment">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:orientation="vertical"
+        android:padding="16dp"
+        tools:ignore="UselessParent">
 
+        <TextView
+            android:id="@+id/textViewTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="會員中心"
+            android:textSize="45sp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="16dp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
+
+        <!-- 用戶名稱 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewUsername"
+                android:layout_width="144dp"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="用戶名稱"
+                tools:ignore="HardcodedText" />
+
+            <EditText
+                android:id="@+id/editTextUsername"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:hint="輸入用戶名稱"
+                tools:ignore="Autofill,HardcodedText,TextFields" />
+        </LinearLayout>
+
+        <!-- 電子郵件 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewEmail"
+                android:layout_width="144dp"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="電子郵件"
+                tools:ignore="HardcodedText"/>
+
+            <EditText
+                android:id="@+id/editTextEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:hint="輸入電子郵件"
+                tools:ignore="Autofill,HardcodedText,TextFields"/>
+        </LinearLayout>
+
+        <!-- 電話號碼 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewPhone"
+                android:layout_width="144dp"
+                android:layout_height="wrap_content"
+                android:text="電話號碼"
+                android:textSize="20sp"
+                tools:ignore="HardcodedText" />
+
+            <EditText
+                android:id="@+id/editTextPhone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:hint="輸入電話號碼"
+                android:inputType="phone"
+                tools:ignore="Autofill,HardcodedText"/>
+
+        </LinearLayout>
+
+        <!-- 地址 -->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewAddress"
+                android:layout_width="144dp"
+                android:layout_height="wrap_content"
+                android:text="地址"
+                android:textSize="20sp"
+                tools:ignore="HardcodedText" />
+
+            <EditText
+                android:id="@+id/editTextAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:hint="輸入地址"
+                tools:ignore="Autofill,HardcodedText,TextFields"/>
+
+        </LinearLayout>
+
+        <!-- 緊急聯絡人 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewEmergencyContact"
+                android:layout_width="144dp"
+                android:layout_height="wrap_content"
+                android:text="緊急聯絡人"
+                android:textSize="20sp"
+                tools:ignore="HardcodedText" />
+
+            <Button
+                android:id="@+id/button_EmergencyContact"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:textSize="20sp"
+                android:text="新增緊急聯絡人"
+                android:background="@drawable/color"
+                tools:ignore="HardcodedText"/>
+        </LinearLayout>
+
+    </LinearLayout>
 </FrameLayout>
