--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -105,7 +105,11 @@
         android:id="@+id/nav_user_data"
         android:name="com.example.myapplication.ui.user_data.user_dataFragment"
         android:label="@string/menu_user_data"
-        tools:layout="@layout/fragment_user_data" />
+        tools:layout="@layout/fragment_user_data" >
+        <action
+            android:id="@+id/action_nav_user_data_to_emergency_contact"
+            app:destination="@id/nav_emergency_contact" />
+    </fragment>
     <fragment
         android:id="@+id/nav_user_like"
         android:name="com.example.myapplication.ui.user_like.user_likeFragment"
@@ -118,10 +122,10 @@
         tools:layout="@layout/fragment_user_set" >
         <action
             android:id="@+id/action_nav_user_set_to_feedback"
-            app:destination="@id/feedback" />
+            app:destination="@id/nav_feedback" />
         <action
             android:id="@+id/action_nav_user_set_to_guidedTour"
-            app:destination="@id/guidedTour" />
+            app:destination="@id/nav_guidedTour" />
     </fragment>
     <fragment
         android:id="@+id/medicine_allboxFragment"
@@ -134,13 +138,18 @@
         android:label="@string/menu_user_memory"
         tools:layout="@layout/fragment_user_memory" />
     <fragment
-        android:id="@+id/guidedTour"
+        android:id="@+id/nav_guidedTour"
         android:name="com.example.myapplication.ui.guidedtour.GuidedTour"
         android:label="fragment_guided_tour"
         tools:layout="@layout/fragment_guided_tour" />
     <fragment
-        android:id="@+id/feedback"
+        android:id="@+id/nav_feedback"
         android:name="com.example.myapplication.ui.feedback.feedback"
         android:label="fragment_feedback"
         tools:layout="@layout/fragment_feedback" />
+    <fragment
+        android:id="@+id/nav_emergency_contact"
+        android:name="com.example.myapplication.ui.emergency.emergency_contact"
+        android:label="fragment_emergency_contact"
+        tools:layout="@layout/fragment_emergency_contact" />
 </navigation>
