20240324_行事曆功能嘗試

--- a/app/src/main/res/layout/fragment_calender_thing.xml
+++ b/app/src/main/res/layout/fragment_calender_thing.xml
@@ -151,7 +151,7 @@
                     android:hint="@string/thing_illustrate" />
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/save_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
