--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="200dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -22,61 +22,36 @@
 
             <TextView
                 android:id="@+id/textUser"
-                android:layout_width="200dp"
+                android:layout_width="250dp"
                 android:layout_height="60dp"
                 android:layout_marginStart="8dp"
                 android:text="常用功能"
+                android:gravity="center"
                 android:textSize="45sp"
                 tools:ignore="HardcodedText" />
 
             <Button
                 android:id="@+id/settingsButton"
-                android:layout_width="200dp"
-                android:layout_height="150dp"
-                android:layout_marginTop="10dp"
+                android:layout_width="250dp"
+                android:layout_height="200dp"
+                android:layout_marginTop="120dp"
                 android:background="@drawable/color"
                 android:text="系統設定"
-                android:textAlignment="textStart"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                app:backgroundTint="@null"
-                tools:ignore="ButtonStyle,HardcodedText" />
-
-            <Button
-                android:id="@+id/activityButton"
-                android:layout_width="200dp"
-                android:layout_height="150dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/color"
-                android:text="活動紀錄"
-                android:textAlignment="textStart"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                app:backgroundTint="@null"
-                tools:ignore="ButtonStyle,HardcodedText" />
-
-            <Button
-                android:id="@+id/favoritesButton"
-                android:layout_width="200dp"
-                android:layout_height="150dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/color"
-                android:text="最愛收藏"
-                android:textAlignment="textStart"
-                android:textSize="25sp"
+                android:gravity="center"
+                android:textSize="30sp"
                 android:textStyle="bold"
                 app:backgroundTint="@null"
                 tools:ignore="ButtonStyle,HardcodedText" />
 
             <Button
                 android:id="@+id/profileButton"
-                android:layout_width="200dp"
-                android:layout_height="150dp"
+                android:layout_width="250dp"
+                android:layout_height="200dp"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/color"
                 android:text="個人檔案"
-                android:textAlignment="textStart"
-                android:textSize="25sp"
+                android:gravity="center"
+                android:textSize="30sp"
                 android:textStyle="bold"
                 app:backgroundTint="@null"
                 tools:ignore="ButtonStyle,HardcodedText" />
