--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -77,14 +77,8 @@
             android:id="@+id/action_nav_user_to_nav_user_data"
             app:destination="@id/nav_user_data" />
         <action
-            android:id="@+id/action_nav_user_to_nav_user_like"
-            app:destination="@id/nav_user_like" />
-        <action
             android:id="@+id/action_nav_user_to_nav_user_set"
             app:destination="@id/nav_user_set" />
-        <action
-            android:id="@+id/action_nav_user_to_nav_user_memory"
-            app:destination="@id/nav_user_memory" />
     </fragment>
     <activity
         android:id="@+id/mainActivity"
@@ -109,12 +103,10 @@
         <action
             android:id="@+id/action_nav_user_data_to_emergency_contact"
             app:destination="@id/nav_emergency_contact" />
+        <action
+            android:id="@+id/action_nav_user_data_to_forget_password"
+            app:destination="@id/forget_password" />
     </fragment>
-    <fragment
-        android:id="@+id/nav_user_like"
-        android:name="com.example.myapplication.ui.user_like.user_likeFragment"
-        android:label="@string/menu_user_like"
-        tools:layout="@layout/fragment_user_like" />
     <fragment
         android:id="@+id/nav_user_set"
         android:name="com.example.myapplication.ui.user_set.user_setFragment"
@@ -133,11 +125,6 @@
         android:label="@string/menu_medicine_allbox"
         tools:layout="@layout/fragment_medicine_allbox" />
     <fragment
-        android:id="@+id/nav_user_memory"
-        android:name="com.example.myapplication.ui.user_memory.user_memoryFragment"
-        android:label="@string/menu_user_memory"
-        tools:layout="@layout/fragment_user_memory" />
-    <fragment
         android:id="@+id/nav_guidedTour"
         android:name="com.example.myapplication.ui.guidedtour.GuidedTour"
         android:label="fragment_guided_tour"
@@ -150,6 +137,11 @@
     <fragment
         android:id="@+id/nav_emergency_contact"
         android:name="com.example.myapplication.ui.emergency.emergency_contact"
-        android:label="fragment_emergency_contact"
+        android:label="@string/menu_emergency_contact"
         tools:layout="@layout/fragment_emergency_contact" />
+    <fragment
+        android:id="@+id/forget_password"
+        android:name="com.example.myapplication.forget_password"
+        android:label="@string/menu_forget_password"
+        tools:layout="@layout/fragment_forget_password" />
 </navigation>
