--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -25,7 +25,6 @@
             android:layout_marginTop="60dp"
             android:padding="10dp"
             android:src="@drawable/images10">
-
         </ImageView>
 
         <!-- 帳號輸入 -->
@@ -92,13 +91,31 @@
 
         </LinearLayout>
 
-        <!-- 記住密碼的 CheckBox -->
-        <CheckBox
-            android:id="@+id/remember_password"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="記住密碼"
-            tools:ignore="HardcodedText" />
+            android:orientation="horizontal">
 
+            <!-- 記住密碼的 CheckBox -->
+            <CheckBox
+                android:id="@+id/remember_password"
+                android:layout_width="175dp"
+                android:layout_height="60dp"
+                android:text="記住密碼"
+                tools:ignore="HardcodedText" />
+
+            <!-- 忘記密碼按鈕 -->
+            <Button
+                android:id="@+id/forgot_password"
+                android:layout_width="175dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="6dp"
+                android:background="@drawable/color_3"
+                android:text="忘記密碼"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:backgroundTint="@null"
+                tools:ignore="ButtonStyle,HardcodedText" />
+        </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
