--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mobile_navigation"
+    android:id="@+id/action_settings"
     app:startDestination="@+id/nav_home">
 
     <fragment
@@ -43,7 +43,7 @@
         tools:layout="@layout/fragment_medicine" >
         <action
             android:id="@+id/nav_medicine_allbox"
-            app:destination="@id/medicine_allboxFragment" />
+            app:destination="@id/nav_medicine_allbox" />
     </fragment>
     <fragment
         android:id="@+id/nav_login"
@@ -127,7 +127,7 @@
             app:destination="@id/nav_guidedTour" />
     </fragment>
     <fragment
-        android:id="@+id/medicine_allboxFragment"
+        android:id="@+id/nav_medicine_allbox"
         android:name="com.example.myapplication.ui.medicine_allbox.medicine_allboxFragment"
         android:label="@string/menu_medicine_allbox"
         tools:layout="@layout/fragment_medicine_allbox" />
