--- a/app/src/main/res/layout/fragment_calender_thing.xml
+++ b/app/src/main/res/layout/fragment_calender_thing.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.calender_thing.calender_thingFragment">
+    tools:context=".ui.calender_thing.CalenderThingFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -15,26 +17,31 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="50dp"
-                android:textSize="45sp"
-                android:text="@string/Calender_thing" />
+                android:id="@+id/textView_calender_thing"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="28dp"
+                android:text="@string/Calender_thing"
+                android:textSize="50sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteY="7dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="16dp"
-                tools:ignore="MissingConstraints">
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/textView_calender_thing">
 
                 <!-- 事件名稱 -->
                 <EditText
                     android:id="@+id/editText_thing"
-                    android:layout_width="390dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="50dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="5dp"
                     android:textSize="20sp"
                     android:hint="@string/thing_name"
                     tools:ignore="Autofill,TextFields" />
@@ -143,8 +150,8 @@
                 <!-- 事件輸入 -->
                 <EditText
                     android:id="@+id/editTextEventDescription"
-                    android:layout_width="390dp"
-                    android:layout_height="50dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
                     android:textSize="20sp"
@@ -157,13 +164,6 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:text="@string/thing_save" />
-
-                <Button
-                    android:id="@+id/editButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:text="@string/thing_edit" />
 
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
