--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -66,7 +66,7 @@
         android:id="@+id/nav_calender"
         android:name="com.example.myapplication.ui.Calender.CalenderFragment"
         android:label="@string/menu_calender"
-        tools:layout="@layout/fragment_calender" >
+        tools:layout="@layout/fragment_calender">
         <action
             android:id="@+id/action_nav_calender_to_nav_calender_thing"
             app:destination="@id/nav_calender_thing" />
@@ -92,14 +92,10 @@
         android:id="@+id/nav_registration"
         android:name="com.example.myapplication.ui.registration.RegistrationFragment"
         android:label="@string/menu_registration"
-        tools:layout="@layout/fragment_registration" >
-        <action
-            android:id="@+id/action_nav_registration_to_nav_user_data3"
-            app:destination="@id/nav_user_data" />
-    </fragment>
+        tools:layout="@layout/fragment_registration" />
     <fragment
         android:id="@+id/nav_calender_thing"
-        android:name="com.example.myapplication.ui.calender_thing.calender_thingFragment"
+        android:name="com.example.myapplication.ui.calender_thing.CalenderThingFragment"
         android:label="@string/menu_calender_thing"
         tools:layout="@layout/fragment_calender_thing" />
     <fragment
@@ -110,9 +106,6 @@
         <action
             android:id="@+id/action_nav_user_data_to_emergency_contact"
             app:destination="@id/nav_emergency_contact" />
-        <action
-            android:id="@+id/action_nav_user_data_to_forget_password"
-            app:destination="@id/nav_forget_password" />
     </fragment>
     <fragment
         android:id="@+id/nav_user_set"
