--- a/app/src/main/res/layout/fragment_emergency_contact.xml
+++ b/app/src/main/res/layout/fragment_emergency_contact.xml
@@ -22,6 +22,15 @@
             android:layout_marginBottom="16dp"
             tools:ignore="HardcodedText" />
 
+	    <ImageView
+		    android:id="@+id/image_emergency"
+		    android:layout_width="380dp"
+		    android:layout_height="wrap_content"
+		    android:layout_centerHorizontal="true"
+		    android:layout_marginBottom="24dp"
+		    android:src="@drawable/emergency"
+		    tools:ignore="ContentDescription,ObsoleteLayoutParam" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
