--- a/app/src/main/res/layout/fragment_forget_password.xml
+++ b/app/src/main/res/layout/fragment_forget_password.xml
@@ -30,6 +30,7 @@
         android:layout_height="wrap_content"
         android:text="@string/send_out"
         android:layout_below="@id/edit_email"
+	    android:background="@drawable/color_3"
         android:layout_marginTop="16dp"
         tools:ignore="HardcodedText" />
 
