--- a/app/src/main/res/layout/fragment_user_data.xml
+++ b/app/src/main/res/layout/fragment_user_data.xml
@@ -4,13 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.user_data.user_dataFragment">
-
+	<ScrollView
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		tools:ignore="UselessParent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp"
-        tools:ignore="UselessParent">
+        tools:ignore="ScrollViewSize,UselessParent">
 
         <TextView
             android:id="@+id/textViewTitle"
@@ -23,15 +26,24 @@
             android:textStyle="bold"
             tools:ignore="HardcodedText" />
 
-        <!-- 用戶名稱 -->
-        <LinearLayout
+
+	    <ImageView
+		    android:id="@+id/image_user"
+		    android:layout_width="380dp"
+		    android:layout_height="wrap_content"
+		    android:layout_centerHorizontal="true"
+		    android:layout_marginBottom="24dp"
+		    android:src="@drawable/user"
+		    tools:ignore="ContentDescription,ObsoleteLayoutParam" />
+	    <!-- 用戶名稱 -->
+	    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textViewUsername"
-                android:layout_width="144dp"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:text="用戶名稱"
@@ -54,7 +66,7 @@
 
             <TextView
                 android:id="@+id/textViewEmail"
-                android:layout_width="144dp"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:text="電子郵件"
@@ -77,7 +89,7 @@
 
             <TextView
                 android:id="@+id/textViewPhone"
-                android:layout_width="144dp"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:text="電話號碼"
                 android:textSize="20sp"
@@ -103,7 +115,7 @@
 
             <TextView
                 android:id="@+id/textViewAddress"
-                android:layout_width="144dp"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:text="地址"
                 android:textSize="20sp"
@@ -127,7 +139,7 @@
 
             <TextView
                 android:id="@+id/textViewEmergencyContact"
-                android:layout_width="144dp"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:text="緊急聯絡人"
                 android:textSize="20sp"
@@ -142,6 +154,16 @@
                 android:background="@drawable/color"
                 tools:ignore="HardcodedText"/>
         </LinearLayout>
+	    <!-- 事件列表 -->
 
-    </LinearLayout>
+	    <TextView
+		    android:id="@+id/eventTextView"
+		    android:layout_width="match_parent"
+		    android:layout_height="162dp"
+		    android:text=""
+		    android:textSize="16sp"
+		    tools:ignore="MissingConstraints" />
+
+        </LinearLayout>
+	</ScrollView>
 </FrameLayout>
