--- a/app/src/main/res/layout/fragment_user_data.xml
+++ b/app/src/main/res/layout/fragment_user_data.xml
@@ -145,24 +145,33 @@
                 android:textSize="20sp"
                 tools:ignore="HardcodedText" />
 
-            <Button
-                android:id="@+id/button_EmergencyContact"
-                android:layout_width="200dp"
-                android:layout_height="50dp"
-                android:textSize="20sp"
-                android:text="新增緊急聯絡人"
-                android:background="@drawable/color"
-                tools:ignore="HardcodedText"/>
+	        <Button
+		        android:id="@+id/button_EmergencyContact"
+		        android:layout_width="wrap_content"
+		        android:layout_height="50dp"
+		        android:background="@drawable/color"
+		        android:text="新增緊急聯絡人"
+		        android:textSize="20sp"
+		        tools:ignore="HardcodedText" />
         </LinearLayout>
 	    <!-- 事件列表 -->
 
 	    <TextView
 		    android:id="@+id/eventTextView"
 		    android:layout_width="match_parent"
-		    android:layout_height="162dp"
+		    android:layout_height="match_parent"
 		    android:text=""
 		    android:textSize="16sp"
 		    tools:ignore="MissingConstraints" />
+
+	    <Button
+		    android:id="@+id/button_data_save"
+		    android:layout_width="380dp"
+		    android:layout_height="50dp"
+		    android:background="@drawable/color"
+		    android:text="保存"
+		    android:textSize="20sp"
+		    tools:ignore="HardcodedText" />
 
         </LinearLayout>
 	</ScrollView>
